# planner-buckets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLAN_V2.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  start-local.cmd  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml  release.yml  temporary-lockfile-metadata-fix.yml
docs/: DESKTOP.md
scripts/: start-local.ps1  verify.ps1
src/: App.integration.test.tsx  App.tsx  styles.css  styles.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BucketColumn.test.tsx  BucketColumn.tsx  ProjectBoard.tsx  ProjectList.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskEditor.tsx  TemplateLibrary.tsx
src/hooks/: usePlannerHistory.test.ts  usePlannerHistory.ts  usePlannerKeyboardShortcuts.test.ts  usePlannerKeyboardShortcuts.ts
src/selectors/: globalBucketView.test.ts  globalBucketView.ts
src/services/: plannerClipboard.test.ts  plannerClipboard.ts  plannerImport.test.ts  plannerImport.ts  plannerImportV2.test.ts  plannerPersistence.test.ts  plannerPersistence.ts  plannerPersistenceV2.test.ts
src/state/: plannerReducer.test.ts  plannerReducer.ts  plannerReducerV2.test.ts  plannerReducerV2.ts
src/storage/: plannerStorage.test.ts  plannerStorage.ts
src/test/: setup.ts
(+9 files in other folders)
