[package]
name = "planner-buckets"
version = "1.1.0"
description = "Local-first planning board for projects, buckets, and tasks."
authors = ["Nobodyworld"]
license = "MIT"
repository = "https://github.com/Nobodyworld/app-planner-buckets"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "planner_buckets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-clipboard-manager = "=2.3.2"
